Fixed on the index page the color overflowing on section2, more ideasd : for section 2 on the index add tiles onlick shows facts or simple table with facts, in need of language translation in readme theres a small scipt its better do manually do it even if its longer. the buttons overflow with the text ex- 'start' button is too smart for 'commencer '

--- a/index/css/style.css
+++ b/index/css/style.css
@@ -109,7 +109,7 @@ nav{
   padding: 80px 10%;
 }
 .ColorSection2{
-  height: 75vh;
+  height: 84vh;
   background-color: #8B0000;
   color: #f9f4ef;
   padding: 80px 10%;
